# business-rule-graph

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .roam-leak-patterns.py  .roam-suppressions.yml  .roamignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.md  LICENSE  Makefile  OPTIMIZATION.md  README.md  ROADMAP.md  action.yml  glama.json  llms-install.md  pyproject.toml  roam-bench.py  server.json
.claude-plugin/: plugin.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/scripts/: gate_eval.py  pr-comment.js  sarif_guard.py
.github/workflows/: architecture-guardian.yml  cga-attestation.yml  ci.yml  cloudflare-pages.yml  dogfood.yml  pages.yml  publish.yml  roam-ci.yml  roam.yml  secret-scan.yml
.hermes/: plan-workspace.md  plan.md  spec-frontend.md  spec-workspace.md  spec.md  tasks-workspace.md  tasks.md
bench/retrieve/: README.md  SUBMISSION.md  roam_self.coderag.jsonl  roam_self.jsonl
benchmarks/agent-eval/: README.md  compare.py  evaluate.py  prompts.py  run_eval.py  scoring.py  summarize_results.py
benchmarks/oss-eval/: README.md  run_oss_bench.py  targets.json
dev/: .gitignore  MCP-SECURITY-POSTURE.md  agent_compare.py  agent_compare_focus.py  agent_compare_focus_scoreboard.py  agent_compare_multirepo_scoreboard.py  agent_compare_scoreboard.py  agent_compare_wide.py  audit_session_tool_usage.py  build_command_reference.py  build_readme_counts.py  command_audit.py  compatibility-baseline.json  dogfood_dedup_check.py  env_doctor.py  generate_terminal_demo_gif.py  pin_github_actions.sh  profile-mcp-import.py  quality_baseline.ps1  repo_hygiene.py  roam-bench.py  roam_agent.py  roam_smoke.py  todo_guard.py
dev/example-plugin/: README.md  pyproject.toml
dev/example-plugin/roam_plugin_example/: __init__.py
dev/example-plugin/roam_plugin_example_extras/: __init__.py  bridge.py  cli.py  extractor.py
dev/example-plugin/roam_plugin_rails/: __init__.py
docs/: COMMANDS.md  algo-polish-research.md  audit_report_template.md  ci-integration.md  fresh-install-smoke.md  quality_baseline.md  sibling-patch-network-v1.md
docs/concepts/: caller-metrics.md
docs/site/: README.md  app.js  architecture.html  benchmarks.md  command-reference.html  comparisons.md  docs.css  getting-started.html  index.html  integration-tutorials.html  landing.css  landing.js  landscape.html  language-precision.md  robots.txt  sitemap.xml  styles.css
reports/: competitor_tracker.md
rules/community/: README.md
scripts/: audit_dead_cli_flags.py  audit_mcp_cli_parity.py  bench_analyze.py  build_changelog_html.py  build_commands_doc.py  cold_start_test.py  export_mcp_receipt_schema.py  extract_mode_usage.py  extract_regen_signal.py  internal_language_patterns.py  linkcheck.py  prepush_check.py  quality_dashboard.py  release_artifacts.py  roam_efficacy.py  roam_fallback_diag.py  scan_internal_language.py  scan_snake_case_violations.py  secret_scan.py  seed_hook_body_shas.py  stranger_precision_harness.py  strip_metadata.py  sync_surface_counts.py  verify_release.py  wait-for-output.sh
skills/roam/: SKILL.md
src/roam/: __init__.py  __main__.py  _glob_match.py  _signature_utils.py  agent_opt.py  api.py  atomic_io.py  capability.py  cli.py  command_advice.py  command_graph.py  competitor_site_data.py  compile_telemetry.py  config.py  coverage_reports.py  exit_codes.py  git_utils.py  github_check.py  guard_enums.py  guard_errors.py  guard_log.py  guard_rules.py  mcp-server-card.json  mcp_server.py  observability.py  observability_opt.py  plugins.py  pr_bundle_primitives.py  procedure_mining.py  proof_bundle.py  proof_bundle_render.py  resilience.py  savings.py  surface_counts.py  telemetry.py  transcript_backfill.py  verdict.py  verification_contract.py
templates/audit-report/: README.md  audit-report.md.tmpl  control-mapping-README.md  evidence-checklist.md  pr-replay-template.md  render.py  sample-audit-report.md  sample-pr-replay-fastapi.md  sample-pr-replay-roam-selfaudit.md  sample-pr-replay-team.md  sample-redacted.md
templates/demos/: canonical-evidence.json  canonical-pr-context.md  canonical-pr-replay.md  insufficient-evidence.json  insufficient-pr-replay.md
templates/email/: customer-journey.md
templates/examples/: .roam-rules.yml  .roam-suppressions.yml  .roamignore-findings  README.md  agent-change-packet.md  post-merge-stale-refs.sh  pre-commit-stale-refs.yaml  roam-guard-pr.README.md  roam-guard-pr.bitbucket-pipelines.yml  roam-guard-pr.circleci.yml  roam-guard-pr.github-actions.yml  roam-guard-pr.gitlab-ci.yml  roam-guard-pr.jenkinsfile  roam-guard-rules.README.md  roam-guard-rules.default.yml  roam-guard-rules.go.yml  roam-guard-rules.nextjs.yml  roam-guard-rules.rails.yml  smells.suppress.yml  suppressions.json
templates/legal/: README.md  dpa.md  nda-mutual.md  security-procurement-packet.md  sow-master.md  (+1 more)
tests/: _findings_helpers.py  _gen_test_prop.py  _w805_emit_helpers.py  _writegen.py  conftest.py  helpers.py  test_actor_refs_provenance.py  test_actor_trust.py  test_adrs.py  test_adrs_helpers.py  test_adversarial.py  test_adversarial_pattern2_guard.py  test_adversarial_runner.py  test_affected.py  test_agent_export.py  test_agent_mode.py  test_agent_mode_telemetry.py  test_agent_modes.py  test_agent_opt.py  test_agent_plan_context.py  test_agent_score.py  test_agents_md.py  test_ai_ratio.py  test_ai_readiness.py  test_ai_rot_reconciliation.py  test_alerts_cmd.py  test_algo_nested_lookup_dataflow.py  test_algo_scoped_and_wired.py  test_alias_deprecation.py  test_always_on_budget_cap.py  test_annotations.py  test_anomaly.py  test_api_changes.py  test_api_drift.py  test_approvals_provenance.py  test_architecture_drift.py  test_architecture_guardian_workflow.py  test_ask.py  test_atomic_io_consolidation.py  test_atomic_writes.py  (+1348 more)
(+3268 files in other folders)
